# 42_call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml
src/: decoder.py  errors.py  io_utils.py  jsonschema.py  main.py  model_wrapper.py  models.py  parser.py  schema.py  utils.py
stubs/llm_sdk/: __init__.pyi
test/: test.py  test_io_behaviors.py
tests/: test_io_utils.py  test_parser.py  test_schema.py
