[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm-sdk",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable=true}

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]                                                                                                                                                                    
pythonpath = ["."]  
