[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Constrained decoder for function calls using LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "llm-sdk",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "types-colorama>=0.4.15.20260408",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable=true}

[tool.pytest.ini_options]                                                                                                                                                                    
pythonpath = ["."]  

[tool.mypy]                                                                                            
plugins = ["pydantic.mypy"]
mypy_path = "stubs"

[tool.ruff]
line-length = 79
[tool.ruff.lint]
select = ["E", "F", "B", "I"]
